<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rectangulo"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/baseR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/base"
        />

    <EditText
        android:id="@+id/alturaR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/altura"
        />


    <Button
        android:id="@+id/bCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:onClick="bClick"/>

    <EditText
        android:id="@+id/resultadoR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/area"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/volverR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        android:onClick="bClick"/>



</LinearLayout>